# reger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: example_file_handler.py  example_hello_world.py  example_specific_logger.py
src/reger/: __init__.py  colour_formater.py  utils.py
