[project]
name = "reger"
version = "v0.1.1"
description = "Simple colour log formatter for logging library"
readme = "README.md"
authors = [
    { name = "ityeri", email = "ityeri9@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
reger = "reger:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
